42 - Make possibble to open blob details dialog on standings and event pages
- Refactored the dialog to wrapper-ui pattern, having most of the frontend logic in the wrapper
- When a cached blob is not provided (blobs page use case), but a blob id is provided fetch the data of the selected blob
